- Fixed bug #51577 (Uninitialized memory reference with oci_bind_array_by_name)
  (Oracle Corp.)
- Fixed bug #51562 (query timeout in mssql can not be changed per query).
  (ejsmont dot artur at gmail dot com)
- Fixed bug #51445 (var_dump() invalid/slow *RECURSION* detection). (Felipe)
- Fixed bug #51435 (Missing ifdefs / logic bug in crypt code cause compile
  errors). (Felipe)
- Fixed bug #51394 (Error line reported incorrectly if error handler throws an 
  exception). (Stas)
- Fixed bug #51393 (DateTime::createFromFormat() fails if format string contains
  timezone). (Adam)
- Fixed bug #51347 (mysqli_close / connection memory leak). (Andrey, Johannes)
- Fixed bug #51338 (URL-Rewriter is still enabled if use_only_cookies is
  on). (Ilia, j dot jeising at gmail dot com)
- Fixed bug #51291 (oci_error doesn't report last error when called two times)
  (Oracle Corp.)
- Fixed bug #51276 (php_load_extension() is missing when HAVE_LIBDL is undefined). 
  (Tony)
- Fixed bug #51273 (Faultstring property does not exist when the faultstring is
  empty) (Ilia, dennis at transip dot nl)
- Fixed bug #51269 (zlib.output_compression Overwrites Vary Header). (Adam)
- Fixed bug #51257 (CURL_VERSION_LARGEFILE incorrectly used after libcurl
  version 7.10.1). (aron dot ujvari at microsec dot hu)
- Fixed bug #51242 (Empty mysql.default_port does not default to 3306 anymore,
  but 0). (Adam)
- Fixed bug #51237 (milter SAPI crash on startup). (igmar at palsenberg dot com)
- Fixed bug #51213 (pdo_mssql is trimming value of the money column). (Ilia, 
  alexr at oplot dot com)
- Fixed bug #51190 (ftp_put() returns false when transfer was successful).  
  (Ilia)
- Fixed bug #51183 (ext/date/php_date.c fails to compile with Sun Studio).
  (Sriram Natarajan)
- Fixed bug #51176 (Static calling in non-static method behaves like $this->).
  (Felipe)
- Fixed bug #51171 (curl_setopt() doesn't output any errors or warnings when    
  an invalid option is provided). (Ilia)